--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <input type="button" class="button" onClick="displayImg()" value="Next Card" id="mybutton">
 <br>
 
-<img src="0.jpg" name="canvas" style="height:100%"/>
+<img src="https://github.com/RamanP/my_demo/blob/main/0.jpg" name="canvas" style="height:100%"/>
 
 </body>
 
@@ -34,7 +34,7 @@ imgArr.unshift("0.jpg");
 imgArr.push("5.jpg")
 console.log(imgArr);
 function displayImg(){
-document.canvas.src=""+imgArr[aNum];
+document.canvas.src="https://github.com/RamanP/my_demo/blob/main/"+imgArr[aNum];
 if (aNum < 5) {
   aNum = aNum + 1;
 } else {
